<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginHorizontal="24dp"
  tools:context=".MainActivity">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:hint="@string/text_gross_income"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/gross_income_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/text_tax_bracket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/text_tax_bracket"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

  <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:layout_constraintTop_toBottomOf="@id/text_tax_bracket">

    <RadioButton
      android:id="@+id/radio_high"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/radio_high" />

    <RadioButton
      android:id="@+id/radio_medium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/radio_medium" />

    <RadioButton
      android:id="@+id/radio_low"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/radio_low"
      android:checked="true" />
  </RadioGroup>

  <com.google.android.material.switchmaterial.SwitchMaterial
    android:id="@+id/switchMaterial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="@string/text_round_net_income"
    app:layout_constraintTop_toBottomOf="@id/radioGroup" />

  <Button
    android:id="@+id/button_calculate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="@string/button_calculate"
    app:layout_constraintTop_toBottomOf="@id/switchMaterial" />

  <TextView
    android:id="@+id/text_net_income"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:gravity="end"
    android:text="@string/text_net_income"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/button_calculate" />
</androidx.constraintlayout.widget.ConstraintLayout>